icon mobile bug

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -316,4 +316,9 @@ footer {
     background: #12addd;
 }
 
+   @media (max-width: 768px) {
+      .col-xs-6 {
+    width: 49%;
+}
+    }
 
